--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h3 class="banner-greeting">Hi, I  am</h3>
+                <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
@@ -35,7 +36,10 @@
         <!-- about section starts -->
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
             <div class="about-info-container">
                 <!-- .about-info*4>h4.info-title+p.info-description -->
                 <div class="about-info">
@@ -61,28 +65,35 @@
         <!-- what i do section starts -->
         <section>
             <h3 class="section-title">What I do</h3>
-            <p id="what-i-do-description" class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <p id="what-i-do-description" class="section-description">I have more than 10 years experience building
+                software for clients all over the world. Below is a quick overview of my main technical skill sets and
+                technologies i use. Want to find out more about my experience? Check out my online resume and project
+                portfolio.</p>
             <div class="skills-container">
                 <!-- .skill*4>img+h3.skill-title+p.skill-description -->
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <h3 class="skill-title">Vanilla JavaScript</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <h3 class="skill-title">React</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <h3 class="skill-title">Node.js</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <h3 class="skill-title">MongoDB</h3>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
@@ -97,22 +108,25 @@
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
                 <div class="resume-column">
@@ -120,22 +134,25 @@
                     <div class="resume-item">
                         <h2 class="resume-item-title">Sr. Font End Developer</h2>
                         <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">Jr. Font End Developer</h2>
                         <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resume-item-title">HTML Developer</h2>
                         <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -148,7 +165,8 @@
     <footer>
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
-            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div class="social-links">
                 <a href=""><img src="images/icons/facebook.png" alt=""></a>
                 <a href=""><img src="images/icons/twitter.png" alt=""></a>
@@ -157,6 +175,12 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let’s Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
         </div>
     </footer>
 </body>
